update yarn build to yarn export

--- a/.github/main.yml
+++ b/.github/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install and Build
         run: |
           yarn install
-          yarn build
+          yarn run export
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
