--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
     "prebuild": "npm install && npm run lint",
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider next start",
+    "export:with-typedoc": "npm run export && npm run typedoc",
+    "export": "cross-env NODE_ENV=production next export --outdir docs/",
     "preexport": "npm run clean && npm run build",
     "postexport": "node shellwork.js",
     "clean": "npx rimraf docs .next",
