add Web-SealedSecret project and renewal sites UI

--- a/package.json
+++ b/package.json
@@ -1,81 +1,44 @@
 {
-  "name": "resume-nextjs",
-  "lastestUpdatedAt": "2025-03-10",
-  "version": "1.0.0",
-  "description": "Static HTML based RESUME made with next.js",
-  "main": "index.js",
+  "name": "sapcy-portfolio",
+  "version": "3.0.0",
+  "private": true,
+  "description": "Sapcy's Portfolio - Resume & Projects",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env DEBUG=yosume:* next",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
-    "prebuild": "npm install && npm run lint",
-    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider next start",
-    "export:with-typedoc": "npm run export && npm run typedoc",
-    "export": "cross-env NODE_ENV=production next export --outdir docs/",
-    "preexport": "npm run clean && npm run build",
-    "postexport": "node shellwork.js",
-    "clean": "npx rimraf docs .next",
-    "lint": "eslint \"component/**/*\" \"pages/**/*\" \"payload/**/*\" \"*.ts\" --fix",
-    "typedoc": "typedoc --excludeExternals"
+    "dev": "next dev",
+    "build": "npm run build:sealedsecret && next build",
+    "build:sealedsecret": "cd node_modules/@sapcy/web-sealedsecret && npm install && npm run build",
+    "postinstall": "cd node_modules/@sapcy/web-sealedsecret && npm install && npm run build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "homepage": "https://sapcy.github.io",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sapcy/sapcy.github.io.git"
   },
-  "keywords": [
-    "resume",
-    "next"
-  ],
-  "contributors": [],
   "license": "MIT",
+  "lastestUpdatedAt": "2026-01-12",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@types/debug": "^4.1.7",
-    "bootstrap": "^4.6.0",
-    "chalk": "^4.1.2",
-    "debug": "^4.3.2",
-    "jquery": "^3.6.0",
-    "luxon": "^1.28.0",
-    "next": "^10.2.3",
-    "next-images": "^1.8.1",
-    "next-seo": "^4.26.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "reactstrap": "^8.9.0",
-    "shelljs": "^0.8.5",
-    "styled-components": "^5.3.1"
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@sapcy/web-sealedsecret": "github:sapcy/web-sealedsecret",
+    "next": "14.1.0",
+    "next-seo": "^6.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reactstrap": "^9.2.2"
   },
   "devDependencies": {
-    "@types/luxon": "^1.27.1",
-    "@types/next-seo": "^1.10.0",
-    "@types/node": "^13.13.52",
-    "@types/react": "^16.14.14",
-    "@types/shelljs": "^0.8.9",
-    "@types/styled-components": "^5.1.13",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "cpy-cli": "^3.1.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^7.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.25.1",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.2",
-    "typedoc": "~0.19.2",
-    "typescript": "^4.9.5"
-  },
-  "resolutions": {
-    "**/minimist": "^1.2.3"
+    "@types/node": "^20.11.0",
+    "@types/node-forge": "^1.3.11",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
