--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "description": "Sapcy's Portfolio - Resume & Projects",
   "scripts": {
     "dev": "next dev",
-    "build": "npm run build:sealedsecret && next build",
-    "build:sealedsecret": "cd node_modules/@sapcy/web-sealedsecret && npm install && npm run build",
-    "postinstall": "cd node_modules/@sapcy/web-sealedsecret && npm install && npm run build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "homepage": "https://sapcy.github.io",
   "repository": {
@@ -25,6 +24,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@sapcy/web-sealedsecret": "github:sapcy/web-sealedsecret",
+    "debug": "^4.3.4",
+    "luxon": "^3.4.4",
     "next": "14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
@@ -32,11 +33,15 @@
     "reactstrap": "^9.2.2"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.0",
     "@types/node-forge": "^1.3.11",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
