--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@sapcy/web-kube-cert": "file:../web-kube-cert",
+    "@sapcy/web-kube-cert": "github:sapcy/web-kube-cert",
     "@sapcy/web-sealedsecret": "github:sapcy/web-sealedsecret",
     "debug": "^4.3.4",
     "luxon": "^3.4.4",
